<resources>

    <string name="FACEBOOK_APP_ID">1634259326593400</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">322f900a551bd4c92347e6b9dc868548</string>

    <string name="GCM_Sender_Id">142465509587</string>
    <string name="network_error">Please check your internet connection</string>

    <string name="app_name">Barrister</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="logo">B</string>
    <string name="app_title_bold">BARRISTER</string>
    <string name="your_online_diary">YOUR DIARY ALWAYS WITH YOU</string>
    <string name="your_online_diary_small">YOUR DIARY ALWAYS WITH YOU</string>

    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>

    <string name="hint_number">Phone number</string>
    <string name="hint_email_id">Email id</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_referral_code">Referral code</string>
    <string name="create">Create</string>

    <string name="company_name">Singulars soft</string>
    <string name="terms_and_condition_acceptance">Choosing register means you are agree to terms of use and privacy policy of Singulars soft service</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="no_account">No account? Create new!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_love_app">Refer and Earn</string>
    <string name="menu_important_link">Important Websites</string>
    <string name="menu_log_out">Logout</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_contact_us">Contact Us</string>

    <string name="enter_email_id">Enter your register email id to get password</string>
    <string name="get_password">Get Password</string>
    <string name="tab1">Today\'s</string>
    <string name="tab2">Cases</string>
    <string name="tab3">Courts</string>
    <string name="tab4">Clients</string>
    <string name="title_activity_home_screen_left_drawer">HomeScreenLeftDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="enter_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>

    <string name="we_value">We value community and friendship</string>
    <string name="refer_second_passage">Tell your friends to check our Barrister app on their smart phone, And tell them to apply your Referral code while creating account.You both will get one credit,
    when credit score reach up to 50, both will get surprise gift from us.</string>


</resources>
