<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.singular.barrister.ForgotPassword">
    <EditText
        android:id="@+id/editTextEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_email_id"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_marginTop="@dimen/fab_margin"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGetPassword"
        android:text="@string/get_password"
        android:background="@drawable/circular_corner_button"
        android:layout_below="@+id/editTextEmailId"
        android:paddingLeft="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_id"
        android:textColor="#777777"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_below="@id/buttonGetPassword"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>
</RelativeLayout>
